fixed css for callActions too squashed together

--- a/src/Behavior.css
+++ b/src/Behavior.css
@@ -1,4 +1,5 @@
 .wrapper {
+    min-width: 100%;
     margin: 8px;
     padding: 1rem;
     border: 2px solid white;
