--- a/src/CallTracker.css
+++ b/src/CallTracker.css
@@ -1,3 +1,7 @@
+.trackerWrapper {
+  min-width: 250px;
+}
+
 .timerToggle {
     position: fixed;
     bottom:   -1.5rem;
@@ -40,11 +44,12 @@
 }
 
 .callActions {
-    width: 40%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    border: 1px solid red;
 }
 
 .action {
